Fix the gap between the logo and the menu on small screens

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -306,7 +306,7 @@ footer i {
     }
 
     nav ul {
-        top: 91px;
+        top: 72px;
     }
 
     .menu-options li {
